msm8996-common: ConfigPanel: KCal support rework
@alexxxdev: reworked seekbar, changes applies on finger release,
added EditView for ability to enter user values

--- a/configpanel/res/values/styles.xml
+++ b/configpanel/res/values/styles.xml
@@ -31,7 +31,7 @@
     </style>
 
     <style name="SettingsSwitchPreference" parent="@*android:style/Preference.DeviceDefault.SwitchPreference">
-        <item name="android:iconSpaceReserved">true</item>
+        <item name="android:iconSpaceReserved">false</item>
         <item name="android:singleLineTitle">false</item>
     </style>
 
