--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -372,5 +372,6 @@
     <bool name="config_deviceHasButtonBacklight">true</bool>
     <bool name="config_deviceHasVariableButtonBrightness">true</bool>
     <integer name="config_buttonBrightnessSettingDefault">255</integer>
+    <bool name="config_button_brightness_support">true</bool>
 
 </resources>
