--- a/configpanel/res/xml/display_calibration.xml
+++ b/configpanel/res/xml/display_calibration.xml
@@ -21,6 +21,16 @@
         android:summary="@string/kcal_enabled_summary"
         android:persistent="false" />
     <com.cyanogenmod.settings.device.utils.SeekBarPreference
+        android:key="kcal_color_temp"
+        android:title="@string/kcal_color_temp"        
+        android:dependency="kcal_enabled"
+        android:persistent="false"
+        android:layout="@layout/slider_preference"
+        android:recycleEnabled="false"
+        app:max_value="7000"
+        app:min_value="1000"
+        app:default_value="6400"/>
+    <com.cyanogenmod.settings.device.utils.SeekBarPreference
         android:key="kcal_red"
         android:title="@string/kcal_red"        
         android:dependency="kcal_enabled"
