--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -359,6 +359,10 @@
     
     <!-- Enable Night display, which requires HWC 2.0. -->
     <bool name="config_nightDisplayAvailable">true</bool>
+    
+    <!-- Boolean indicating whether the HWC setColorTransform function can be performed efficiently
+         in hardware. -->
+    <bool name="config_setColorTransformAccelerated">true</bool>
 
     <!-- Control whether the always on display mode is available. This should only be enabled on
          devices where the display has be tuned to be power efficient in DOZE and/or DOZE_SUSPEND
@@ -370,5 +374,8 @@
 
     <!-- Button backlight -->
     <bool name="config_button_brightness_support">true</bool>
+
+    <!-- Enable full screen DT2S in lockscreen -->
+    <bool name="fullScreenDT2S">true</bool>
 
 </resources>
