--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -352,20 +352,14 @@
             64 - Volume rocker
           For example, a device with Home, Back and Menu keys would set this
         config to 7. -->
-    <integer name="config_deviceHardwareKeys">83</integer>
+    <add-resource type="integer" name="config_deviceHardwareKeys">83</add-resource>
     
     <!-- Does the battery LED support multiple colors. Used to decide if the user can change the colors -->
-    <bool name="config_multiColorBatteryLed">true</bool>
+    <add-resource type="bool" name="config_multiColorBatteryLed">true</add-resource>
     
     <!-- Enable Night display, which requires HWC 2.0. -->
     <bool name="config_nightDisplayAvailable">true</bool>
     
-    <!-- Button backlight -->
-    <bool name="config_button_brightness_support">true</bool>
-
-    <!-- Enable full screen DT2S in lockscreen -->
-    <bool name="fullScreenDT2S">true</bool>
-
     <!-- Does the notification LED support multiple colors?
          Used to decide if the user can change the colors -->
     <bool name="config_multiColorNotificationLed">true</bool>
@@ -379,12 +373,12 @@
     <bool name="config_displayBlanksAfterDoze">true</bool>
 
     <!-- Button backlight -->
-    <bool name="config_deviceHasButtonBacklight">true</bool>
-    <bool name="config_deviceHasVariableButtonBrightness">true</bool>
-    <integer name="config_buttonBrightnessSettingDefault">255</integer>
+    <add-resource type="bool" name="config_deviceHasButtonBacklight">true</add-resource>
+    <add-resource type="bool" name="config_deviceHasVariableButtonBrightness">true</add-resource>
+    <add-resource type="integer" name="config_buttonBrightnessSettingDefault">255</add-resource>
 
     <!-- Does the notification LED support multiple colors?
          Used to decide if the user can change the colors -->
-    <bool name="config_multiColorNotificationLed">true</bool>
+    <add-resource type="bool" name="config_multiColorNotificationLed">true</add-resource>
 
 </resources>
